Fix not showing stop record button - Closes #2519

--- a/packages/rocketchat-theme/assets/stylesheets/base.less
+++ b/packages/rocketchat-theme/assets/stylesheets/base.less
@@ -2357,7 +2357,7 @@ a.github-fork {
 				display: none;
 			}
 
-			&.show-mic .mic, &.show-mic .mic .stop-mic {
+			&.show-mic .mic, &.show-mic .stop-mic {
 				display: inline-block;
 			}
 
